--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
 	"name": "maksymcherevko/repka-locale",
 	"version": "1.2.0",
 	"require": {
+		"minimum-stability": "dev",
+		"prefer-stable" : true,
 		"php": ">=5.2.11",
 		"zf1/zend-exception": "self.version",
 		"zf1/zend-xml": "self.version",
